Add smoke test binaries for .NET, Java, and Node.js bindings
- Introduced project.nuget.cache for .NET smoke tests to manage package dependencies.
- Added compiled Smoke.class for Java bindings, enabling smoke tests for Java integration.
- Included smoke.node binary for Node.js bindings, facilitating smoke tests in Node.js environment.